[tool.poetry]
name = "LearnMLTrading"
version = "0.1.0"
description = ""
authors = ["WianStipp <stippwian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.3"
Backtesting = "^0.3.1"
black = "^20.8b1"
pylint = "^2.7.2"
requests = "^2.25.1"
matplotlib = "^3.4.1"
mypy = "^0.931"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
pdoc3 = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
